# bitcoin-core

./: CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  coins.h  init.cpp  logging.cpp  logging.h  txmempool.h  validation.cpp
src/gpu_kernel/: CMakeLists.txt  gpu_batch_validator.cu  gpu_batch_validator.h  gpu_cuckoo.cu  gpu_direct_storage.cu  gpu_direct_storage.h  gpu_ecdsa_verify.cuh  gpu_eval_script.cuh  gpu_hash.cuh  gpu_hash_test_kernels.cu  gpu_logging.cpp  gpu_logging.h  gpu_mining.cu  gpu_mining.h  gpu_opcodes.cuh  gpu_opcodes_crypto.cuh  gpu_opcodes_sig.cuh  gpu_schnorr_verify.cuh  gpu_script_num.cuh  gpu_script_stack.cuh  gpu_script_types.cuh  gpu_secp256k1_ecmult.cuh  gpu_secp256k1_field.cuh  gpu_secp256k1_group.cuh  gpu_secp256k1_scalar.cuh  gpu_sighash.cuh  gpu_test.cu  gpu_test.h  gpu_tx_graph.cpp  gpu_tx_graph.h  gpu_types.h  gpu_utils.h  gpu_utxo.cu  gpu_utxo.h  gpu_utxo_compact.cu  gpu_utxo_loader.cu  gpu_utxo_loader_wrapper.cpp  gpu_utxo_wrapper.cpp  gpu_validation.h  gpu_validation_proper.cu
src/init/: cuda_device_link.cu
src/kernel/: CMakeLists.txt
src/test/: CMakeLists.txt  GPU_TEST_COVERAGE.md  cuda_device_link.cu  gpu_compaction_tests.cpp  gpu_crypto_tests.cpp  gpu_crypto_verification.cpp  gpu_cuckoo_tests.cpp  gpu_hash_tests.cpp  gpu_hash_verification_tests.cpp  gpu_initialization_tests.cpp  gpu_kernel_tests.cpp  gpu_loader_tests.cpp  gpu_memory_management_tests.cpp  gpu_p2tr_script_path_tests.cpp  gpu_script_tests.cpp  gpu_sig_tests.cpp  gpu_sighash_tests.cpp  gpu_stress_tests.cpp  gpu_tapscript_rules_tests.cpp  gpu_tx_graph_tests.cpp  gpu_utxo_edge_case_tests.cpp  gpu_utxo_loader_debug_test.cpp  gpu_utxo_loader_tests.cpp  gpu_utxo_tests.cpp  gpu_validation_kernel_tests.cpp
